Completed WXS, WGS, RNA-Seq BamMap on DC2

--- a/gdc-import.config
+++ b/gdc-import.config
@@ -4,7 +4,7 @@ export IMPORTGDC_HOME="/home/mwyczalk_test/src/importGDC"
 
 # Data download location
 export DATA_DIR="/diskmnt/Projects/cptac"
-export GDCTOKEN="token/gdc-user-token.2017-11-13T19-13-55.857Z.txt"
+export GDCTOKEN="token/gdc-user-token.2017-11-14T15_55_43.552Z.txt"
 export SR="config/SR.CPTAC3.b1.dat"
 
 # Define this if in MGI environment
