Complete working download of WGS at MGI
* all data, including logs, scripts, and downloaded data in one location

--- a/gdc-import.config
+++ b/gdc-import.config
@@ -10,14 +10,15 @@ export IMPORTGDC_HOME="./importGDC"  # importGDC is a submodule
 # However, might want to change name, since other analysis will use this data too
 export DATAD="/gscmnt/gc2521/dinglab/mwyczalk/somatic-wrapper-data/"
 #export DATA_DIR="/diskmnt/Projects/cptac"
-export GDCTOKEN="token/gdc-user-token.2017-12-15T20_42_09.411Z.txt"  # this might be an environment variable 
+export GDCTOKEN="token/gdc-user-token.2017-12-20T06_23_24.969Z.txt"
 
 # This is where download-related metadata lives (config files, logs, etc)
-export CONFIG_HOME="$DATAD/GDC_import/import.config/$BATCH"
-mkdir -p $CONFIG_HOME
+export CONFIG_HOME_H="$DATAD/GDC_import/import.config/$BATCH"
+export CONFIG_HOME_C="/data/GDC_import/import.config/$BATCH"
+mkdir -p $CONFIG_HOME_H
 
 # Moving SR file here is part of installation
-export SR="$CONFIG_HOME/SR.CPTAC3.b1.dat"
+export SR="$CONFIG_HOME_H/SR.CPTAC3.b1.dat"
 
 # Define this if in MGI environment
 MGI=1
