DC2 and batch2 specific changes

--- a/gdc-import.config
+++ b/gdc-import.config
@@ -1,16 +1,16 @@
 # Define locale-specific (MGI vs. DC2) environment variables here
 
 # the batch of cases under consideration for download, aka the project name
-BATCH="CPTAC3.b1"
+BATCH="CPTAC3.b2"
 
 export IMPORTGDC_HOME="./importGDC"  # importGDC is a submodule
 
 # Data download location
 # NOTE: this has to be compatible with SomaticWrapper analysis, and should use DATAD_H from there
 # However, might want to change name, since other analysis will use this data too
-export DATAD="/gscmnt/gc2521/dinglab/mwyczalk/somatic-wrapper-data/"
+export DATAD="/diskmnt/Projects/cptac"
 #export DATA_DIR="/diskmnt/Projects/cptac"
-export GDCTOKEN="token/gdc-user-token.2017-12-20T06_23_24.969Z.txt"
+export GDC_TOKEN="token/gdc-user-token.2017-12-27T17_47_44.208Z.txt"
 
 # This is where download-related metadata lives (config files, logs, etc)
 export CONFIG_HOME_H="$DATAD/GDC_import/import.config/$BATCH"
@@ -21,4 +21,4 @@ mkdir -p $CONFIG_HOME_H
 export SR="$CONFIG_HOME_H/SR.CPTAC3.b1.dat"
 
 # Define this if in MGI environment
-MGI=1
+MGI=0
