Minor updates to docker launch

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,5 +21,6 @@ RUN cd /usr/local \
     && mv gdc-client /usr/local/bin
 
 COPY . /usr/local/importGDC
+WORKDIR /usr/local/importGDC
 
 CMD ["/bin/bash"]
