Adding WUDocker submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docker/WUDocker"]
 	path = docker/WUDocker
 	url = https://github.com/ding-lab/WUDocker.git
+[submodule "WUDocker"]
+	path = WUDocker
+	url = https://github.com/ding-lab/WUDocker.git
